--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.14",
+    "@heroicons/react": "^2.0.17",
     "@nextui-org/react": "^1.0.0-beta.12",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
